# hgraph

./: Cargo.toml  README.md
src/: cc.rs  hyperedge.rs  hypergraph_traits.rs  lib.rs  visits.rs
src/binaries/: main.rs  main1.rs
src/tests/: constructors.rs
